-fixed chrome specific overflow behavior -remove developer names from footer on xs res

--- a/client/app/chat/chat.less
+++ b/client/app/chat/chat.less
@@ -8,7 +8,14 @@
   top: @navbar-height + 24px + @navbar-height;
   bottom: @navbar-height + 12px;
   width: 100%;
-  overflow-y: auto;
+  .tab-messages {
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    height: 100%;
+    overflow-y: scroll;
+  }
 }
 
 .navbar-send {
